Kube/dev/hello-node.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: app-dev
  name: aks-hellonode-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:     
      app.kubernetes.io/name: aks-hellonode
      app.kubernetes.io/instance: app-dev
      app.kubernetes.io/part-of: aks-services
      app.kubernetes.io/managed-by: azure-devops
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aks-hellonode
        app.kubernetes.io/instance: app-dev
        app.kubernetes.io/version: "#{Release.Artifacts.aks.BuildNumber}#"    
        app.kubernetes.io/part-of: aks-services
        app.kubernetes.io/managed-by: azure-devops
    spec:
      containers:
      - name: aks-hellonode
        image: arnab.azurecr.io/aks-helloworldnode:#{Release.Artifacts.aks.BuildNumber}#
        ports:
        - containerPort: 80
        imagePullPolicy: Always
      imagePullSecrets:
      - name: acr-auth
---
apiVersion: v1
kind: Service
metadata:
  namespace: app-dev
  name: aks-hellonode-service
  labels:
    app.kubernetes.io/name: aks-hellonode
    app.kubernetes.io/instance: app-dev
    app.kubernetes.io/version: "#{Release.Artifacts.aks.BuildNumber}#"    
    app.kubernetes.io/part-of: aks-services
    app.kubernetes.io/managed-by: azure-devops
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
  selector:
    app.kubernetes.io/name: aks-hellonode
    app.kubernetes.io/instance: app-dev
    app.kubernetes.io/version: "#{Release.Artifacts.aks.BuildNumber}#"    
    app.kubernetes.io/part-of: aks-services
    app.kubernetes.io/managed-by: azure-devops
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: app-dev
  name: aks-hellonode-ingress
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.org/server-snippets: "gzip on;"
#    cert-manager.io/cluster-issuer: letsencrypt-prod    
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"    
spec:  
#  tls:
#  - hosts:
    #- app-staging.informatiq.no
#    secretName: app-staging-informatiq-no-cert-prod
  rules:
  - host: arnab12.eastus.cloudapp.azure.com
    http:
      paths:           
      - path: /api/node
        backend:
          serviceName: aks-hellonode-service
          servicePort: 80
      - path: /html
        backend:
          serviceName: aks-html-service
          servicePort: 90
